--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@paypal/react-paypal-js": "^8.1.3",
+    "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
-    "jwt-decode": "^4.0.0",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.11.0",
+    "react-photo-album": "^2.3.0",
     "react-router-dom": "6.10.0",
-    "zustand": "^4.5.0"
+    "sweetalert2": "^11.7.32",
+    "yet-another-react-lightbox": "^3.14.0",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.0.3",
+    "simple-zustand-devtools": "^1.1.0",
+    "vite": "^4.4.5"
   }
 }
