--- a/backend/ecom/requirements.txt
+++ b/backend/ecom/requirements.txt
@@ -1,16 +1,28 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
 Django==4.2.9
 django-cors-headers==4.3.1
 django-filter==23.5
 django-jazzmin==2.6.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+idna==3.6
 importlib-metadata==7.0.1
+inflection==0.5.1
 Markdown==3.5.2
+packaging==23.2
 PyJWT==2.8.0
 pytz==2023.4
+PyYAML==6.0.1
+requests==2.31.0
+shortuuid==1.0.11
 sqlparse==0.4.4
+stripe==8.4.0
 typing_extensions==4.9.0
 tzdata==2023.4
+uritemplate==4.1.1
+urllib3==2.2.1
 zipp==3.17.0
