--- a/backend/ecom/requirements.txt
+++ b/backend/ecom/requirements.txt
@@ -9,12 +9,15 @@ django-jazzmin==2.6.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+environs==10.3.0
 idna==3.6
 importlib-metadata==7.0.1
 inflection==0.5.1
 Markdown==3.5.2
+marshmallow==3.21.0
 packaging==23.2
 PyJWT==2.8.0
+python-dotenv==1.0.1
 pytz==2023.4
 PyYAML==6.0.1
 requests==2.31.0
