--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
-    "@paypal/react-paypal-js": "8.1.3",
+    "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.10",
@@ -26,7 +26,7 @@
     "react-icons": "^4.11.0",
     "react-photo-album": "^2.3.0",
     "react-router-dom": "6.10.0",
-    "sweetalert2": "^11.10.5",
+    "sweetalert2": "^11.7.32",
     "yet-another-react-lightbox": "^3.14.0",
     "zustand": "^4.4.4"
   },
